--- a/style.css
+++ b/style.css
@@ -23,3 +23,17 @@ main {
 div.title-home {
     text-align: center;
 }
+
+img.slider {
+    max-width: 50%;
+
+}
+
+h1 { color: black; font-family: 'Helvetica Neue', sans-serif; font-size: 275px; font-weight: bold; letter-spacing: 5px; line-height: 5; text-align: center; }
+
+h4 { color: grey; font-family: 'Open Sans', sans-serif; font-size: 30px; font-weight: 300; line-height: 32px; margin: 0 0 72px; text-align: center; }
+
+h8 { color: rgb(29,87,155); font-family: 'Helvetica Neue', sans-serif; font-size: 14px; line-height: 24px; margin: 0 0 24px; text-align: center; text-justify: inter-word; }
+
+h3, h5 {
+    font-family: 'Helvetica Neue', sans-serif; font-size: 14px; line-height: 24px; margin: 0 0 24px; text-align: center; text-justify: inter-word; }
