--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ img.slider {
 
 }
 
+footer {
+    max-width: 500px;
+}
+
 h1 { color: black; font-family: 'Helvetica Neue', sans-serif; font-size: 275px; font-weight: bold; letter-spacing: 5px; line-height: 5; text-align: center; }
 
 h4 { color: grey; font-family: 'Open Sans', sans-serif; font-size: 30px; font-weight: 300; line-height: 32px; margin: 0 0 72px; text-align: center; }
